--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/jpeg" href="./src/assets/finsphera_logo.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Finsphera Frontend Challenge </title>
+    <title>FinSphera Frontend Challenge </title>
   </head>
   <body>
     <div id="root"></div>
